# JAX-OPTIMAL-TRANSPORT-FAGPROJECT

./: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
lightning_logs/version_0/: config.yaml  metrics.csv
lightning_logs/version_0/checkpoints/: epoch=35-step=61884.ckpt
lightning_logs/version_1/: config.yaml  hparams.yaml  metrics.csv
lightning_logs/version_1/checkpoints/: epoch=19-step=34380.ckpt
src/HPC/: image_classifier.py
src/demo_project/: data.py  demo.py  evaluate.py  model.py  test.py  train.py  utils.py  visualize.py
src/main_project/: train.py
